Commiting code to fix the review comments